2009-08-26  Robert Sesek  <rsesek@chromium.org>

Reviewed by Eric Seidel.

        [Chromium] Multi-value select boxes cannot do non-contiguous selection on Mac
        https://bugs.webkit.org/show_bug.cgi?id=28670

        Change the condition regarding the key modifier check for non-contiguous
        selection on a multi-value list from just PLATFORM(MAC) to
        PLATFORM(MAC) || (PLATFORM(CHROMIUM) && PLATFORM(DARWIN)).

        No new tests. This patch only changes the condition on which a certain mouse
        event modifier key is used.

        * dom/SelectElement.cpp:
        (WebCore::SelectElement::listBoxDefaultEventHandler):


Canonical link: https://commits.webkit.org/39353@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@47777 268f45cc-cd09-0410-ab3c-d52691b4dbfc